# Proyecto-Integrador-de-Redes-y-Oper

./: README.md
Etapa 2/: client.py  server.py
Etapa 3/: client.py  instalar.sh  prueba.py  runNodos.sh  server.py  topologia.csv  topologia2.csv
Etapa 3/Oper/: CMakeLists.txt  Disco.cpp  Disco.h  Disk.cpp  Disk.h  ExpressionParser.cpp  ExpressionParser.hpp  ManejoMemoria.cpp  ManejoMemoria.h  Memoria.cpp  Memoria.h  Memory.cpp  Memory.h  PageReplacement.cpp  PageReplacement.h  PageReplacement.hpp  PageTable.cpp  PageTable.h  PageTableEntry.cpp  PageTableEntry.h  kernel.cpp
Etapa 4/: bitacora.json  homepage.html  server.py
src/: client.py  server.py
src/Oper/: pipe.cpp
